# LogicBank

./: $readme.txt  $release.sh  .gitignore  CLAUDE.md  LICENSE  README.md  README.rst  TESTING.md  conf.py  py.py  pyproject.toml  readme_dev.md  requirements.txt  run_tests.py  run_tests_readme.md  setup.py  test_summary.txt  test_summary_2025-08-17_09-54-14.txt
banking/: __init__.py
banking/basic_web_app/: config.py
banking/basic_web_app/app/: __init__.py
banking/db/: create_db.py  database.db
banking/logic/: __init__.py  rules_bank.py
banking/tests/: __init__.py  transfer_funds.py
examples/after_flush_row_event/db/: database-gold.db  models.py
examples/after_flush_row_event/logic/: rules_bank.py
examples/after_flush_row_event/tests/: test_after_flush_row_event.py
examples/banking/basic_web_app/: config.py
examples/banking/db/: Banking-Inserts.sql  create_db.py  database.db  models.py
logic_bank/: __init__.py  exceptions.py  logic_bank.py  util.py
logic_bank/exec_row_logic/: logic_row.py
logic_bank/exec_trans_logic/: listeners.py  row_sets.py
logic_bank/extensions/: allocate.py  copy.py  copy_children.py  copy_row.py  rule_extensions.py
logic_bank/rule_bank/: SingletonMeta_experiment.py  rule_bank.py  rule_bank_setup.py  rule_bank_withdraw.py
logic_bank/rule_type/: abstractrule.py  aggregate.py  constraint.py  copy.py  count.py  derivation.py  formula.py  parent_cascade.py  parent_check.py  row_event.py  sum.py
nw/basic_web_app/: config.py
nw/db/: SCHEMA:main.uml  __init__.py  database-gold.db  database.db  models.py
nw/logic/: __init__.py  logic.py  rules_bank.py
nw/tests/: __init__.py  add_cust.py  add_cust_utils.py  add_order.py  dlt_order.py  test_add_cust.py  test_add_order.py  test_dlt_order.py  test_upd_employee_audit.py  test_upd_employee_salary.py  test_upd_order_customer.py  test_upd_order_required.py  test_upd_order_reuse.py  test_upd_order_shipped.py  test_upd_order_shipped_auto_commit.py  test_upd_orderclass_required.py  upd_employee_salary.py  upd_order_customer.py  upd_order_required.py  upd_order_reuse.py  upd_order_shipped.py  upd_order_shipped_auto_commit.py  upd_orderclass_required.py
payment_allocation/db/: SCHEMA:main.uml  database-gold.db  database.db  models.py
payment_allocation/logic/: __init__.py  rules_bank.py
payment_allocation/tests/: __init__.py  add_payment.py
referential_integrity/db/: database-gold.db  database.db  models.py
referential_integrity/logic/: __init__.py  rules_bank.py
referential_integrity/tests/: __init__.py  ref_integ_tests.py
system/LogicBank-Internal-Dev/: after-flush-row-event-conditions-bug.md  basic_demo_sample.md  commit-event-mutation-gap.md  dependency-scanning.md  dev-architecture.md  dragons-deferred-adjustment.md  multi-relationship-bug.md  passive-delete-cascade-typo.md  release-management.md  spurious-parent-dependency.md
(+111 files in other folders)
